lintian (2.5.53) UNRELEASED; urgency=medium

  XXX: generate tag summary

  * checks/changes.{pm,desc}
    + [CL] Ignore DFSG-repacked packages when checking for upstream
      source tarball signatures as they will never match by definition.
  * checks/debhelper.pm:
    + [CL] Prevent a false positive of
      missing-build-dependency-for-dh_-command that can be exposed by
      following the advice for the recently added
      useless-autoreconf-build-depends tag.  (Closes: #869541)
  * checks/scripts.pm:
    + [CL] Correct false positives in
      unconditional-use-of-dpkg-statoverride by detecting "if !" as a
      valid shell prefix.  (Closes: #869587)

  * commands/lintian.pm:
    + [CL] Apply patch from Maia Everett to avoid British spelling when
      using en_US locale.  (Closes: #868897)

 -- Niels Thykier <niels@thykier.net>  Sun, 23 Jul 2017 10:16:35 +0000

lintian (2.5.52) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - appstream-metadata-in-legacy-location
      - appstream-metadata-legacy-format
      - appstream-metadata-malformed-modalias-provide
      - appstream-metadata-missing-modalias-provide
      - copyright-contains-automatically-extracted-boilerplate
      - copyright-year-in-future
      - debian-rules-sets-DEB_BUILD_OPTIONS
      - elf-maintainer-script
      - emacsen-common-without-dh-elpa
      - file-contains-fixme-placeholder
      - gobject-instrospection-package-missing-depends-on-gir-depends
      - manpage-has-overly-generic-name
      - orig-tarball-missing-upstream-signature
      - package-installs-deprecated-upstart-configuration
      - udev-rule-missing-subsystem
      - udev-rule-missing-uaccess
      - udev-rule-unreadable
      - unconditional-use-of-dpkg-statoverride
      - useless-autoreconf-build-depends
    + Removed:
      - copyright-contains-dh-make-perl-boilerplate
      - package-depends-on-multiple-tkx-versions
      - restriction-formula-with-debhelper-without-debhelper-version