@@ -5,6 +5,14 @@ lintian (2.5.53) UNRELEASED; urgency=medium
   * checks/changes.{pm,desc}
     + [CL] Ignore DFSG-repacked packages when checking for upstream
       source tarball signatures as they will never match by definition.
+  * checks/copyright-file.pm:
+    + [CL] Address a number of issues in copyright-year-in-future:
+      - Prevent false positives in port numbers, email addresses, ISO
+        standard numbers and matching specific and general street
+        addresses.  (Closes: #869788)
+      - Match all violating years in a line, not just the first (eg.
+        "2000-2107").
+      - Expand testsuite.
   * checks/debhelper.pm:
     + [CL] Prevent a false positive of
       missing-build-dependency-for-dh_-command that can be exposed by
